# ai-worker-companion

./: .gitignore  CHANGELOG.md  LICENSE  README.md  STATE_SCHEMA_AND_EVALUATION.md  VISION.md  package-lock.json  package.json  pyproject.toml  run_batch.py  session_state.py
companion/: README.md  companion.css  companion.js  index.html
companion/notifications/: notification.js
companion/recovery/: recovery.js
companion/state/: state.js
docs/: AGENT_SESSION_SOURCES.md  ARCHITECTURE.md  CHATGPT_EXPORT_BATCH_REVIEW.md  CHATGPT_EXPORT_REPRESENTATION_REVIEW.md  CHATGPT_EXPORT_VALIDATION.md  COMPANION_PLATFORM_FIT.md  GITHUB_RELEASE_CHECKLIST.md  HEALTH_MODEL.md  IMPORT_VALIDATION_CHECKLIST.md  OFFICIAL_EXPORT_IMPORT_MVP.md  OPENCODE_POC.md  PHASE05_DECISION_MEMO.md  PHASE05_FULL_HUMAN_EVALUATION.md  PHASE05_HUMAN_EVALUATION_QUALITY_REPORT.md  PHASE0_VALIDATION_PLAN.md  PLUGIN_POC.md  PROJECT_VISION.md  REPOSITORY_REVIEW.md  SESSION_VIEWER_MVP.md
evaluation/: ANNOTATION_GUIDE.md  README.md  health_manifest.example.jsonl
examples/: session.state.example.json
integrations/opencode/: README.md
npm/cli/: doctor.js  files.js  install.js  main.js  paths.js
samples/: expected.json  health_repeated_command.jsonl  health_repeated_error.jsonl  session.jsonl
scripts/: build_phase05_review_book.py  build_session_viewer.py  evaluate_health.py  evaluate_samples.py  import_official_export.py  ingest_raw_data.py  run_health_check.py  verify_session_state_cli.py
tests/: test_ingestion_failures.py  test_official_export_importer.py  test_session_state_cli.py
(+38 files in other folders)
