[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-worker-companion"
version = "0.1.0"
description = "Agent-agnostic AI Worker Companion for session state, status, and recovery handoff."
requires-python = ">=3.9"
dependencies = [
  "openai>=1.66.0",
  "pydantic>=2.10.0",
]

[tool.setuptools.packages.find]
where = ["src"]
